objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ACP_Category__c</fullName>
        <description>Hari 04/25/17 - Added for Account Plan</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ADM Market &amp; Competition</fullName>
                </value>
                <value>
                    <fullName>Application Breakdown</fullName>
                </value>
                <value>
                    <fullName>Business Performance</fullName>
                </value>
                <value>
                    <fullName>Market and Competition</fullName>
                </value>
                <value>
                    <fullName>Stakeholder and Relationship</fullName>
                </value>
                <value>
                    <fullName>Supplier Evaluation</fullName>
                </value>
                <value>
                    <fullName>Top Open Opportunities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Contact_Email__c</fullName>
        <description>Alka 05/16/2017: Created for Account Plan to store Contact email Id to which Action is assigned</description>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Acknowledged_Date__c</fullName>
        <label>Acknowledged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_1__c</fullName>
        <label>Action 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Action_2__c</fullName>
        <label>Action 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Action_3__c</fullName>
        <label>Action 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_for_NPS_Cycle_Month__c</fullName>
        <label>Activity_for_NPS_Cycle_Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January Cycle 1</fullName>
                </value>
                <value>
                    <fullName>February Cycle 2</fullName>
                </value>
                <value>
                    <fullName>March Cycle 3</fullName>
                </value>
                <value>
                    <fullName>April Cycle 4</fullName>
                </value>
                <value>
                    <fullName>May Cycle 5</fullName>
                </value>
                <value>
                    <fullName>June Cycle 6</fullName>
                </value>
                <value>
                    <fullName>July Cycle 1</fullName>
                </value>
                <value>
                    <fullName>August Cycle 2</fullName>
                </value>
                <value>
                    <fullName>September Cycle 3</fullName>
                </value>
                <value>
                    <fullName>October Cycle 4</fullName>
                </value>
                <value>
                    <fullName>November Cycle 5</fullName>
                </value>
                <value>
                    <fullName>December Cycle 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Effort_Points__c</fullName>
        <inlineHelpText>Enter estimated effort in hours</inlineHelpText>
        <label>Effort</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU_Owner_Email__c</fullName>
        <label>BU Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BU_Owner_Name__c</fullName>
        <label>BU Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Owner_Phone__c</fullName>
        <label>BU Owner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <description>This field contains the related campaign name.</description>
        <label>Campaign Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coaching_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coaching Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coaching_Record_ID__c</fullName>
        <label>Coaching Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <label>Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cross_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To be checked if this task is assigned to other BU users to communicate on potential new business for them.</inlineHelpText>
        <label>Cross Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detraction_Reason__c</fullName>
        <inlineHelpText>Please select one or multiple Detraction Reasons to ask for support from the needed departement(s).</inlineHelpText>
        <label>Detraction Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Supply chain</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detractor_Task__c</fullName>
        <label>Detractor Task</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Record_id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Escalation_Reason__c</fullName>
        <label>Escalation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Required</fullName>
                </value>
                <value>
                    <fullName>CCP Initiated</fullName>
                </value>
                <value>
                    <fullName>Inadequate Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feed_back_Question__c</fullName>
        <label>Feed back Question</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_back__c</fullName>
        <label>Feed back</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Call_Date__c</fullName>
        <label>Feedback Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Actions__c</fullName>
        <label>Follow Up Actions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>called back</fullName>
                </value>
                <value>
                    <fullName>called back with action item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Received_from__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Follow Up Received from</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GPL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Is there a specific GPL involved in this follow-up ?</inlineHelpText>
        <label>GPL</label>
        <referenceTo>Product_Hierarchy__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Historical_RingDNA_data__c</fullName>
        <description>Historical RignDNa data</description>
        <label>Historical RingDNA data</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date__c</fullName>
        <label>In Progress Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Progress__c</fullName>
        <label>In_Progress</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instructions_Functional_Follow_Up__c</fullName>
        <description>This field is used to provide instructions on how to process a NPS Functional Follow Up Task</description>
        <formula>&quot; 1. check survey results on field NPS SURVEY RESULTS&quot;
&amp; BR() &amp;
&quot; 2. call FOLLOW UP RECEIVED FROM to identify the key area of dissatisfaction&quot;
&amp; BR() &amp;
&quot; 3. if FOLLOW UP RECEIVED FROM is not availible due to travel, holydays, etc. change STATUS to IN PROGRESS&quot;
&amp; BR() &amp;
&quot; 4. create an action plan to improve the defined area of dissatisfaction together with your team members&quot;
&amp; BR() &amp;
&quot; 5. enter a summary of the action plan in COMMENTS&quot;
&amp; BR() &amp;
&quot; 10. Change STATUS to COMPLETED&quot;
&amp; BR() &amp;
&quot; for training material please click on the link&quot; &amp; &quot; &quot; &amp; HYPERLINK(&quot;https://c2s.my.salesforce.com/sfc/#version?selectedDocumentId=069E0000002Duso&quot;, &quot;Training Material&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is used to provide instructions on how to process a NPS Functional Follow Up Task</inlineHelpText>
        <label>Instructions Functional Follow Up</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <formula>&quot; 1. check survey results on field NPS SURVEY RESULTS&quot;
&amp; BR() &amp;
&quot; 2. call NAME to identify the key area of dissatisfaction&quot;
&amp; BR() &amp;
&quot; 3. if NAME is not availible due to travel, holydays, etc. change STATUS to IN PROGRESS&quot;
&amp; BR() &amp;
&quot; 4. enter a summary of the conversation with NAME in COMMENTS&quot;
&amp; BR() &amp; BR() &amp;
&quot; TO CREATE FUNCTIONAL FOLLOW UPS (to assign a task for one of the functional leaders):&quot;
&amp; BR() &amp;
&quot; 5. Enter PART NUMBER and/or GPL (if related to the problem)&quot;
&amp; BR() &amp;
&quot; 6. Create Functional Follow Up by ticking one of the boxes in the NPS SECTION (related to the problem).&quot;
&amp; BR() &amp;
&quot; 7. Enter Comments next to the ticked boxes (these comments will be visible to the functional leader)&quot;
&amp; BR() &amp;
&quot; 8. Change STATUS to FUNCTIONAL FOLLOW UP CREATED&quot;
&amp; BR() &amp;
&quot; 9. Save Task&quot;
&amp; BR() &amp; BR() &amp;
&quot; TO CLOSE TASK&quot;
&amp; BR() &amp;
&quot; 10. Change STATUS to COMPLETED&quot;
&amp; BR() &amp;
&quot; for training material please click on the link&quot; &amp; &quot;  &quot; &amp; HYPERLINK(&quot;https://c2s.my.salesforce.com/sfc/#version?selectedDocumentId=069E0000002Duso&quot;, &quot;Training Material&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructions NPS Follow Up</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePaks__ActivityType__c</fullName>
        <label>Veelo Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opened Pak</fullName>
                </value>
                <value>
                    <fullName>Viewed Pak</fullName>
                </value>
                <value>
                    <fullName>Downloaded File</fullName>
                </value>
                <value>
                    <fullName>Shared Pak</fullName>
                </value>
                <value>
                    <fullName>Shared File</fullName>
                </value>
                <value>
                    <fullName>Opened Shared Pak</fullName>
                </value>
                <value>
                    <fullName>Viewed Shared Pak</fullName>
                </value>
                <value>
                    <fullName>Downloaded Shared File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_task__c</fullName>
        <formula>if ( OwnerId  =  $User.Id , &quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Result_Link__c</fullName>
        <formula>HYPERLINK(NPS_Survey_Result__c, &quot;Survey Result&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Survey Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Result__c</fullName>
        <label>NPS Survey Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_reminder_date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Next reminder date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Action_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Action Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Started__c</fullName>
        <label>Not_Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Is there any part number involved in this follow-up ?</inlineHelpText>
        <label>Part Number</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Playbooks_Call_Date__c</fullName>
        <description>Stores date &amp; time of the call</description>
        <inlineHelpText>Date &amp; time of the call</inlineHelpText>
        <label>Playbooks Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Playbooks_Call_Hour__c</fullName>
        <description>Stores the hour the call was placed in the prospect&apos;s time</description>
        <inlineHelpText>Stores the hour the call was placed in the prospect&apos;s time</inlineHelpText>
        <label>Playbooks Call Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Playbooks_Call_Recording__c</fullName>
        <description>A link to the call recording of that specific call</description>
        <inlineHelpText>A link to the call recording of that specific call</inlineHelpText>
        <label>Playbooks Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Playbooks_Play_Name__c</fullName>
        <description>Stores the name of the play a record is currently enrolled in</description>
        <inlineHelpText>The name of the play a record is currently enrolled in</inlineHelpText>
        <label>Playbooks Play Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Ring_Time__c</fullName>
        <description>Stores how long the phone rang before the prospect picked up</description>
        <inlineHelpText>How long the phone rang before the prospect answered</inlineHelpText>
        <label>Playbooks Ring Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Number__c</fullName>
        <description>Stores the step number a play was on when the activity was completed</description>
        <inlineHelpText>The step number the activity was completed on</inlineHelpText>
        <label>Playbooks Step Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Type__c</fullName>
        <description>Stores the type of step for the task (phone, email, other)</description>
        <inlineHelpText>The type of step for the task (phone, email, other)</inlineHelpText>
        <label>Playbooks Step Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q02_Engineering_Responsiveness_Comments__c</fullName>
        <inlineHelpText>please enter comments for your technology leader</inlineHelpText>
        <label>02. Engineering Responsiveness Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q02_Engineering_Responsiveness__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you create a Functional Follow Up here, it wil be sent to your technology leader</inlineHelpText>
        <label>02. Engineering Responsiveness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q03_Technology_needs_met_Comments__c</fullName>
        <inlineHelpText>please enter comments for your technology leader</inlineHelpText>
        <label>03. Technology needs met Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q03_Technology_needs_met__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you create a Functional Follow Up here, it wil be sent to your technology leader</inlineHelpText>
        <label>03. Technology needs met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q04_Product_Innovation_Comments__c</fullName>
        <inlineHelpText>please enter comments for your technology leader</inlineHelpText>
        <label>04. Product Innovation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q04_Product_Innovation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you create a Functional Follow Up here, it wil be sent to your technology leader</inlineHelpText>
        <label>04. Product Innovation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q05_Business_Understanding_Comments__c</fullName>
        <inlineHelpText>please enter comments for the account manager</inlineHelpText>
        <label>05. Business Understanding Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q05_Business_Understanding__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you create a Functional Follow Up here, it wil be sent to the account manager</inlineHelpText>
        <label>05. Business Understanding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q06_Field_Tech_Support_Comments__c</fullName>
        <inlineHelpText>please enter comments for the field engineer</inlineHelpText>
        <label>06. Field Tech Support Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q06_Field_Tech_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you create a Functional Follow Up here, it wil be sent to the field engineer</inlineHelpText>
        <label>06. Field Tech Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q07_Customer_Care_Support_Comments__c</fullName>
        <inlineHelpText>please enter comments for your customer care leader</inlineHelpText>
        <label>07. Customer Care Support Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q07_Customer_Care_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you create a Functional Follow Up here, it wil be sent to your customer care leader</inlineHelpText>
        <label>07. Customer Care Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q08_Competitive_Price_Comments__c</fullName>
        <inlineHelpText>please enter comments for your pricing leader</inlineHelpText>
        <label>08. Competitive Price Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q08_Competitive_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you create a Functional Follow Up here, it wil be sent to your pricing leader</inlineHelpText>
        <label>08. Competitive Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q09_Delivery_Performance_Comments__c</fullName>
        <inlineHelpText>please enter comments for your operations leader</inlineHelpText>
        <label>09. Delivery Performance Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q09_Delivery_Performance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you create a Functional Follow Up here, it wil be sent to your operations leader</inlineHelpText>
        <label>09. Delivery Performance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q10_Product_Quality_Comments__c</fullName>
        <inlineHelpText>please enter comments for your quality leader</inlineHelpText>
        <label>10. Product Quality Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q10_Product_Quality__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you create a Functional Follow Up here, it wil be sent to your quality leader</inlineHelpText>
        <label>10. Product Quality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_to_exceed_due_date__c</fullName>
        <inlineHelpText>Please mention reason to exceed for exceeding the due date</inlineHelpText>
        <label>Reason to exceed due date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_type_developer_name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record type developer name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <description>Check how much time between respond &amp; follow-up call?</description>
        <formula>IF(IsClosed = true, (LastModifiedDate - CreatedDate) * 24, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Time in hrs.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Select_Language__c</fullName>
        <label>Select_Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Simplified Chinese</fullName>
                </value>
                <value>
                    <fullName>Traditional Chinese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_BU__c</fullName>
        <label>Source BU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Prior_Value__c</fullName>
        <label>Status_Prior_Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Completion_Date__c</fullName>
        <inlineHelpText>This field should be entered by the PM</inlineHelpText>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Assigned_Date__c</fullName>
        <label>Task_Assigned_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Counter__c</fullName>
        <description>used in IND reporting to count the number of tasks</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Option__c</fullName>
        <label>Task Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Sub_Option__c</fullName>
        <label>Task_Sub_Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st Meeting (Call)</fullName>
                </value>
                <value>
                    <fullName>1st Meeting (Face to Face)</fullName>
                </value>
                <value>
                    <fullName>1st Meeting (Video / Web Cast)</fullName>
                </value>
                <value>
                    <fullName>Bad Phone Number</fullName>
                </value>
                <value>
                    <fullName>Corporate phone tree (could not located Person)</fullName>
                </value>
                <value>
                    <fullName>Corporate phone tree (located and spoke Person)</fullName>
                </value>
                <value>
                    <fullName>Corporate phone tree (located Person left voice mail)</fullName>
                </value>
                <value>
                    <fullName>Corporate phone tree (located Person spoke to Gate Keeper)</fullName>
                </value>
                <value>
                    <fullName>Follow Up Meeting (Call)</fullName>
                </value>
                <value>
                    <fullName>Follow Up Meeting (Face to Face)</fullName>
                </value>
                <value>
                    <fullName>Follow Up Meeting (Video / Web Cast)</fullName>
                </value>
                <value>
                    <fullName>Gatekeeper</fullName>
                </value>
                <value>
                    <fullName>Meeting Canceled</fullName>
                </value>
                <value>
                    <fullName>Meeting No Show</fullName>
                </value>
                <value>
                    <fullName>Meeting Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Spoke to Person</fullName>
                </value>
                <value>
                    <fullName>Voice Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Purpose__c</fullName>
        <label>Visit Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Visit</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Product Introduction/Launch</fullName>
                </value>
                <value>
                    <fullName>Product Training/Demo</fullName>
                </value>
                <value>
                    <fullName>Product Quality/Customer Concerns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiting_For_Someone_Date__c</fullName>
        <label>Waiting For Someone Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qbdialer__CallRecordingURL__c</fullName>
        <description>Link to the call recording</description>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Date_Time__c</fullName>
        <label>Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Dial_Number__c</fullName>
        <description>Total number of dials on the record being called</description>
        <label>Call Dial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Hour__c</fullName>
        <description>Hour in which the call was placed from the record&apos;s perspective</description>
        <label>Call Hour</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Lead_Status__c</fullName>
        <description>Lead Status of the record called</description>
        <label>Call Lead Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Ring_Time__c</fullName>
        <description>Ring Time of the phone call</description>
        <label>Call Ring Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Time_Zone__c</fullName>
        <description>Time zone of the number being called</description>
        <label>Call Time Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Callback_Date_Time__c</fullName>
        <label>Callback Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ImpressionId__c</fullName>
        <externalId>true</externalId>
        <label>Impression ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>qbdialer__SMSReminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Text message reminders will be sent to all attendees at the set reminder time.</inlineHelpText>
        <label>Send text msg reminder to all attendees</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>